--- a/RabbitHouseTool/src/main/java/net/orekyuu/rabbithouse/MainWindow.fxml
+++ b/RabbitHouseTool/src/main/java/net/orekyuu/rabbithouse/MainWindow.fxml
@@ -1,51 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.BorderPane?>
+<BorderPane maxHeight="Infinity" maxWidth="Infinity" minHeight="700" minWidth="800" prefHeight="700.0" prefWidth="800.0"
+            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
-            <menus>
-                <Menu mnemonicParsing="false" text="ファイル">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="開く"/>
-                        <MenuItem mnemonicParsing="false" text="新規作成"/>
-                        <MenuItem mnemonicParsing="false" text="保存"/>
-                        <MenuItem mnemonicParsing="false" text="上書き保存"/>
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="開発">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="エラーチェック"/>
-                    </items>
-                </Menu>
-            </menus>
+            <Menu mnemonicParsing="false" text="ファイル">
+                <MenuItem mnemonicParsing="false" text="プロジェクトを開く"/>
+                <MenuItem mnemonicParsing="false" text="プロジェクトの新規作成"/>
+                <MenuItem mnemonicParsing="false" text="保存"/>
+                <MenuItem mnemonicParsing="false" text="上書き保存"/>
+            </Menu>
+            <Menu mnemonicParsing="false" text="開発">
+                <MenuItem mnemonicParsing="false" text="エラーチェック"/>
+            </Menu>
         </MenuBar>
     </top>
     <center>
-        <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-            <tabs>
-                <Tab text="ブロック">
-                    <content>
-                        <BorderPane prefHeight="200.0" prefWidth="200.0">
-                            <left>
-                                <ListView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
-                            </left>
-                        </BorderPane>
-                    </content>
-                </Tab>
-                <Tab text="アイテム">
-                    <content>
-                        <BorderPane prefHeight="200.0" prefWidth="200.0">
-                            <left>
-                                <ListView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
-                            </left>
-                        </BorderPane>
-                    </content>
-                </Tab>
-            </tabs>
+        <TabPane tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+            <Tab text="ブロック">
+                <fx:include source="BlockEditor.fxml"/>
+            </Tab>
+            <Tab text="アイテム">
+                <fx:include source="ItemEditor.fxml"/>
+            </Tab>
         </TabPane>
     </center>
 </BorderPane>
