--- a/RabbitHouseTool/src/main/java/net/orekyuu/rabbithouse/ItemEditor.fxml
+++ b/RabbitHouseTool/src/main/java/net/orekyuu/rabbithouse/ItemEditor.fxml
@@ -3,7 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <BorderPane maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="net.orekyuu.rabbithouse.ItemEditorController">
     <center>
         <AnchorPane maxHeight="Infinity" maxWidth="Infinity" BorderPane.alignment="CENTER">
             <Label layoutX="14.0" layoutY="14.0" text="アイテムの名前" AnchorPane.leftAnchor="14.0"
