--- a/RabbitHouseTool/src/main/java/net/orekyuu/rabbithouse/MainWindow.fxml
+++ b/RabbitHouseTool/src/main/java/net/orekyuu/rabbithouse/MainWindow.fxml
@@ -1,31 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane maxHeight="Infinity" maxWidth="Infinity" minHeight="700" minWidth="800" prefHeight="700.0" prefWidth="800.0"
             xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="net.orekyuu.rabbithouse.MainWindowController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
-            <Menu mnemonicParsing="false" text="ファイル">
-                <MenuItem mnemonicParsing="false" text="プロジェクトを開く" onAction="#openProject"/>
-                <MenuItem mnemonicParsing="false" text="プロジェクトの新規作成" onAction="#createProject"/>
-                <MenuItem mnemonicParsing="false" text="別名で保存" onAction="#saveAsProject"/>
-                <MenuItem mnemonicParsing="false" text="上書き保存" onAction="#saveProject"/>
-            </Menu>
-            <Menu mnemonicParsing="false" text="開発">
-                <MenuItem mnemonicParsing="false" text="エラーチェック"/>
-            </Menu>
+            <menus>
+                <Menu mnemonicParsing="false" text="ファイル">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#openProject" text="プロジェクトを開く">
+                            <accelerator>
+                                <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP"
+                                                    shortcut="UP"/>
+                            </accelerator>
+                        </MenuItem>
+                        <MenuItem mnemonicParsing="false" onAction="#createProject" text="プロジェクトの新規作成">
+                            <accelerator>
+                                <KeyCodeCombination alt="UP" code="N" control="DOWN" meta="UP" shift="UP"
+                                                    shortcut="UP"/>
+                            </accelerator>
+                        </MenuItem>
+                        <MenuItem mnemonicParsing="false" onAction="#saveAsProject" text="別名で保存">
+                            <accelerator>
+                                <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="DOWN"
+                                                    shortcut="UP"/>
+                            </accelerator>
+                        </MenuItem>
+                        <MenuItem mnemonicParsing="false" onAction="#saveProject" text="上書き保存">
+                            <accelerator>
+                                <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP"
+                                                    shortcut="UP"/>
+                            </accelerator>
+                        </MenuItem>
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="開発">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="エラーチェック"/>
+                    </items>
+                </Menu>
+            </menus>
         </MenuBar>
     </top>
     <center>
         <TabPane tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-            <Tab text="ブロック">
-                <fx:include fx:id="blockEditor" source="BlockEditor.fxml"/>
-            </Tab>
-            <Tab text="アイテム">
-                <fx:include fx:id="itemEditor" source="ItemEditor.fxml"/>
-            </Tab>
+            <tabs>
+                <Tab text="ブロック">
+                    <content>
+                        <fx:include fx:id="blockEditor" source="BlockEditor.fxml"/>
+                    </content>
+                </Tab>
+                <Tab text="アイテム">
+                    <content>
+                        <fx:include fx:id="itemEditor" source="ItemEditor.fxml"/>
+                    </content>
+                </Tab>
+            </tabs>
         </TabPane>
     </center>
 </BorderPane>
